---------------------------------------------------------------------------------------------------
Version: 0.0.15
Date: 2023-12-29
  Changes:
    - SE: Meteor/umbrella defense tech requires rocket science packs
    - Bob's: Merge CPU/CPUs items into one. (Might need further balancing or progression changes.)
---------------------------------------------------------------------------------------------------
Version: 0.0.14
Date: 2023-04-16
  Fixes:
    - SE: Fix holmium cable mainboard recipe to use correct ingredients
  Changes:
    - Processing unit recipe time has been further halved
    - K2: Rare metals are now used in mainbord recipes, not processing units
    - SE: Lifesupport canisters no longer require processing units
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2023-04-10
  Changes:
    - Catalyzed oil recipes can now use prod modules.
  Localization:
    - zh-CN thanks to Klarkxy
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2023-04-02
  Changes:
    - Silver brazing alloy will use foundry if enabled.
    - SE: Fix some possible tech/recipe deadlocks
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2023-03-29
  Fixes:
    - Several en locale strings added or fixed
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2023-03-28
  Fixes:
    - Correctly scale low res rich copper entity sprites
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2023-03-27
  Fixes:
    - When silver is disabled, do not enable an alternate electronic circuit recipe
    - Alternate electronic circuit recipe now unlocks at appropriate time in certain mod loadouts
    - Some fixes around platinum, palladium settings