@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.15
 Date: 2023-12-29
+  Fixes:
+    - Silver brazing alloy can now be handcrafted even when foundry is available.
+      This addresses some awkward progressions.
   Changes:
     - SE: Meteor/umbrella defense tech requires rocket science packs
     - Bob's: Merge CPU/CPUs items into one. (Might need further balancing or progression changes.)
